added item-quantity-dropdown, added date-picker

--- a/src/assets/scss/modules/expand_more.scss
+++ b/src/assets/scss/modules/expand_more.scss
@@ -1,6 +1,7 @@
 .expand-more{
-	width: 15px;
-	height: 15px;
+	width: 13px;
+	height: 13px;
 	fill: red;
 	transition: $trFast;
+	align-self: center
 }
