--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -6,11 +6,12 @@ $myThirdFont             : 'QuicksandBold', Arial, sans-serif;
 // Size
 $mainFontColor           : #101010;
 $mainFontSize            : 18px;
+$secondFontSize          : 14px;
 $bigFontSize						 : 24px;
 $middleFontSize					 : 19px;
 $smallFontSize					 : 12px;
-$mainFontWeight          : 400;
-$boldFontWeight          : 600;
+$normal					         : 400;
+$bold						         : 600;
 $mainLineHeight          : 1.4;
 
 $desktopWidth            : 1280px;
