--- a/src/pug/includes/modules/date-dropdown.pug
+++ b/src/pug/includes/modules/date-dropdown.pug
@@ -3,4 +3,5 @@ mixin dateDropdown(title,type, placeholder, name, className)
 		label.input-title #{title}
 			br
 			input(type=type placeholder=placeholder name=name class=className).input.dropdown
-
+			svg.icon-dropdown.expand-more
+				use(xlink:href="#expand_more")
