--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -25,7 +25,7 @@ body {
   padding: 0;
   font-family: $mainFont;
 	font-size: $mainFontSize;
-  font-weight: $mainFontWeight;
+  font-weight: $normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -117,4 +117,5 @@ section, .section {
 @import "modules/iqdropdown";
 @import "modules/dropdown";
 @import "modules/svg-icons";
-@import "modules/icon-dropdown";
+@import "modules/expand_more";
+@import "modules/date-dropdown";
