--- a/src/assets/scss/modules/dropdown.scss
+++ b/src/assets/scss/modules/dropdown.scss
@@ -2,6 +2,21 @@
 	width: 100%;
 	max-width: 320px;
 	color: $ds75;
-	margin-bottom: 14px;
+	font-size: $secondFontSize;
 	@include borderAnimation;
+	max-width: 320px;
+	width: 100%;
+	background-color: #fff;
+	font-size: $secondFontSize;
+	padding: 11px 15px;
+	transition: $trFast;
+	// margin-bottom: 14px;
+	@include borderAnimation;
+	display: flex;
+	justify-content: space-between;
+}
+
+.borderBottomFocus {
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0
 }
