--- a/src/pug/includes/modules/dropdown.pug
+++ b/src/pug/includes/modules/dropdown.pug
@@ -1,16 +1,16 @@
 mixin dropdown(title)
 	label.input-title #{title}
 	.iqdropdown
-		p.iqdropdown-selection(data-seletion-text="item" data-text-plural="items") Сколько гостей
+		p.iqdropdown-selection(data-seletion-text="гость" data-text-plural="Сколько гостей")
 		svg.icon-dropdown.expand-more
 			use(xlink:href="#expand_more")
 		.iqdropdown-menu
-			.iqdropdown-menu-option(data-id=item)
-				p.iqdropdown-item Item 1 
-				p.iqdropdown-description A short description
-			.iqdropdown-menu-option(data-id=item)
-				p.iqdropdown-item Item 2 
-				p.iqdropdown-description A short description
-			.iqdropdown-menu-option(data-id=item)
-				p.iqdropdown-item Item 3 
-				p.iqdropdown-description A short description
+			.iqdropdown-menu-option(data-id="item1" data-defaultcount="0" data-mincount="0" data-maxcount="5")
+				div
+					p.iqdropdown-item Взрослые 
+			.iqdropdown-menu-option(data-id="item2" data-defaultcount="0" data-mincount="0" data-maxcount="10")
+				div
+					p.iqdropdown-item Дети 
+			.iqdropdown-menu-option(data-id="item3" data-defaultcount="0" data-mincount="0" data-maxcount="10")
+				div
+					p.iqdropdown-item Младенцы 
