--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,7 +9,7 @@ block content
 	section
 		.container
 			.item
-				+input("text field","text", "Email","Email")
+				+input("text field","","text", "Email","")
 				br
 				+dropdown("dropdown")
 				br
