--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -17,6 +17,7 @@
        url('/assets/fonts/Montserrat/Montserrat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
        url('/assets/fonts/Montserrat/Montserrat-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
        url('/assets/fonts/Montserrat/Montserrat-Bold.svg') format('svg'); /* Legacy iOS */
+  font-weight: 600;
   }
 @font-face {
   font-family: "QuicksandBold";
