--- a/src/assets/scss/utils/mixins.scss
+++ b/src/assets/scss/utils/mixins.scss
@@ -55,3 +55,13 @@
   }
 }
 // (end)
+
+// fonts 
+
+@mixin Mont {
+  font-family: "Montserrat", Arial, sans-serif;
+}
+@mixin MontBold {
+  font-family: "Montserrat", Arial, sans-serif;
+  font-weight: 700;
+}
