--- a/src/pug/includes/modules/dropdown.pug
+++ b/src/pug/includes/modules/dropdown.pug
@@ -1,11 +1,11 @@
 mixin dropdown(title)
 	label.input-title #{title}
-	.iqdropdown
+	.iqdropdown.guests
 		p.iqdropdown-selection(data-seletion-text="гость" data-text-plural="Сколько гостей")
 		svg.icon-dropdown.expand-more
 			use(xlink:href="#expand_more")
 		.iqdropdown-menu
-			.iqdropdown-menu-option(data-id="item1" data-defaultcount="0" data-mincount="0" data-maxcount="5")
+			.iqdropdown-menu-option(data-id="item1" data-defaultcount="0" data-mincount="0" data-maxcount="10")
 				div
 					p.iqdropdown-item Взрослые 
 			.iqdropdown-menu-option(data-id="item2" data-defaultcount="0" data-mincount="0" data-maxcount="10")
@@ -14,3 +14,6 @@ mixin dropdown(title)
 			.iqdropdown-menu-option(data-id="item3" data-defaultcount="0" data-mincount="0" data-maxcount="10")
 				div
 					p.iqdropdown-item Младенцы 
+			.buttons-actions
+				button.buttons-actions__clean-off Отчистить
+				button.buttons-actions__apply Применить
