--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,9 +13,12 @@ block content
 				br
 				+dropdown("dropdown")
 				br
-				+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field","Email")
+				+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
 				br
-				+input("dropdown","dropdown date-dropdown","text", "ДД.ММ.ГГГГ","date-field dropdown datepicker-here","Email")
+				+input("date dropdown","dropdown date-dropdown","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date")
+				br
+				+input("Filter date dropdown","dropdown date-dropdown filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date")
+
 
 
 
