--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -82,6 +82,11 @@ section, .section {
   }
 }
 
+::spelling-error {
+  color: #fff;
+
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -111,16 +116,19 @@ section, .section {
     max-width: smPhoneWidth;
   }
 }
+.row {
+  display: flex;
+}
+.col {
+  flex: 1;
+}
 
 // Modules
-@import "modules/input";
+@import "modules/input-wrapper";
 @import "modules/iqdropdown";
-@import "modules/dropdown";
 @import "modules/svg-icons";
 @import "modules/expand_more";
-@import "modules/date-dropdown";
 @import "modules/buttons-actions";
 @import "modules/bad-value";
 @import "modules/date-picker";
-@import "modules/arrow_back";
-@import "modules/filter-date-dropdown";
+@import "modules/arrow-forward";
