--- a/src/assets/scss/modules/expand_more.scss
+++ b/src/assets/scss/modules/expand_more.scss
@@ -1,7 +1,7 @@
 .expand-more{
 	width: 13px;
 	height: 13px;
-	fill: red;
 	transition: $trFast;
-	align-self: center
+	align-self: center;
+	fill: $ds50;
 }
