--- a/src/pug/includes/modules/dropdown-bedrooms.pug
+++ b/src/pug/includes/modules/dropdown-bedrooms.pug
@@ -1,19 +1,19 @@
-mixin dropdown(title)
-	label.input-title #{title}
-	.iqdropdown.guests
-		p.iqdropdown-selection(data-seletion-text="гость" data-text-plural="Сколько гостей")
+mixin dropdown-bedrooms(title,className)
+	span.input-title #{title}
+	.iqdropdown(class=className)
+		p.iqdropdown-selection(data-seletion-text="гость" data-text-plural="")
 		svg.icon-dropdown.expand-more
 			use(xlink:href="#expand_more")
 		.iqdropdown-menu
 			.iqdropdown-menu-option(data-id="item1" data-defaultcount="0" data-mincount="0" data-maxcount="10")
 				div
-					p.iqdropdown-item Взрослые 
+					p.iqdropdown-item Спальни 
 			.iqdropdown-menu-option(data-id="item2" data-defaultcount="0" data-mincount="0" data-maxcount="10")
 				div
-					p.iqdropdown-item Дети 
+					p.iqdropdown-item Кровати
 			.iqdropdown-menu-option(data-id="item3" data-defaultcount="0" data-mincount="0" data-maxcount="10")
 				div
-					p.iqdropdown-item Младенцы 
+					p.iqdropdown-item Ванные комнаты
 			.buttons-actions
 				button.buttons-actions__clean-off Отчистить
 				button.buttons-actions__apply Применить
