--- a/src/pug/includes/modules/input.pug
+++ b/src/pug/includes/modules/input.pug
@@ -1,7 +1,7 @@
-mixin input(title, wrappClass, type, placeholder, className, name)
+mixin input(title, wrappClass, type, placeholder, className, name, classNameForIcon, xlink)
 	label(for=inputWrapper).input-title #{title}
 		br
 		span.input-wrapper(class=wrappClass)
-			input(type=type placeholder=placeholder class=className name=name).input
-			svg.icon-dropdown.expand-more
-				use(xlink:href="#expand_more")
+			input.input-wrapper__input(type=type placeholder=placeholder class=className name=name)
+			svg(class=classNameForIcon)
+				use(xlink:href=xlink)
