--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,24 +2,29 @@ extends ../layout/main
 
 include ../includes/modules/input.pug
 include ../includes/modules/date-dropdown.pug
-include ../includes/modules/dropdown.pug
+include ../includes/modules/dropdown-guests.pug
+include ../includes/modules/dropdown-bedrooms.pug
 
 
 block content
 	section
 		.container
-			.item
-				+input("text field","","text", "Email","")
-				br
-				+dropdown("dropdown")
-				br
-				+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
-				br
-				+input("date dropdown","dropdown date-dropdown","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date")
-				br
-				+input("Filter date dropdown","dropdown date-dropdown filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date")
+			.row
+				.col
+					+input("text field","","text", "Email","email","","","")
+					br
+					+dropdown-guests("dropdown","guests")
+					+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
+					br
+					+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more")
+					br
+					+input("Filter date dropdown","input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date","icon-dropdown expand-more","#expand_more")
+					br
+					+input("text field","input-wrapper_w266 input-wrapper_icon-show subscription-text-field","text", "You email adress","email","","arrow-forward","#arrow_forward")
+					br
+					+dropdown-bedrooms("dropdown","bedrooms iqdropdown_w266")
 
-
+	
 
 
 block script
