--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -53,3 +53,6 @@ $white                   : #ffffff;
 $trFast                  : .25s;
 $trMid                   : .5s;
 
+// gradients
+
+$purpleGr                : linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
