--- a/src/pug/includes/modules/date-dropdown.pug
+++ b/src/pug/includes/modules/date-dropdown.pug
@@ -1,6 +1,6 @@
 mixin dateDropdown(title,type, placeholder, name, className)
 	span.date-dropdown-wrapp
-		label.input-title #{title}
+		label.title-element #{title}
 			br
 			input(type=type placeholder=placeholder name=name class=className).input.dropdown
 			svg.icon-dropdown.expand-more
