--- a/src/pug/includes/modules/dropdown-guests.pug
+++ b/src/pug/includes/modules/dropdown-guests.pug
@@ -1,5 +1,5 @@
 mixin dropdown-guests(title,className)
-	span.input-title #{title}
+	span.title-element #{title}
 	.iqdropdown(class=className)
 		p.iqdropdown-selection(data-seletion-text="гость" data-text-plural="")
 		svg.icon-dropdown.expand-more
