--- a/src/pug/includes/modules/input.pug
+++ b/src/pug/includes/modules/input.pug
@@ -1,5 +1,5 @@
 mixin input(title, wrappClass, type, placeholder, className, name, classNameForIcon, xlink)
-	label(for=inputWrapper).input-title #{title}
+	label(for=inputWrapper).title-element #{title}
 		br
 		span.input-wrapper(class=wrappClass)
 			input.input-wrapper__input(type=type placeholder=placeholder class=className name=name)
