--- a/src/assets/scss/modules/buttons-actions.scss
+++ b/src/assets/scss/modules/buttons-actions.scss
@@ -1,11 +1,12 @@
 .buttons-actions {
 	display: flex;
 	justify-content: space-between;
-	padding: 10px 5px 10px 10px;
+	padding: 22px 5px 10px 10px;
 
 	button {
 		text-transform: uppercase;
 		@include MontBold;
+		font-size: $smallFontSize;
 	}
 	&__clean-off {
 		color: $ds50;
