Made readonly for date-picker

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -22,9 +22,9 @@ block content
 					+dropdown-guests("dropdown","guests")
 					+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
 					br
-					+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more")
+					+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 					br
-					+input("Filter date dropdown","input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date","icon-dropdown expand-more","#expand_more")
+					+input("Filter date dropdown","input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 					br
 					+input("text field","input-wrapper_w266 input-wrapper_icon-show subscription-text-field","text", "You email adress","email","","arrow-forward","#arrow_forward")
 					br
