change font-family for increment

--- a/src/assets/scss/modules/iqdropdown.scss
+++ b/src/assets/scss/modules/iqdropdown.scss
@@ -147,6 +147,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		font-family: OpenSans, Arial, sans-serif;
 		&::after {
 			content: "+";
 			display: block;
