--- a/src/assets/scss/modules/date-picker.scss
+++ b/src/assets/scss/modules/date-picker.scss
@@ -48,13 +48,12 @@
    ------------------------------------------------- */
 .datepicker-here {
    &::placeholder {
-    color: $ds75;
+    color: transparent;
     font-size: $secondFontSize;
     transition: $trFast;
   }
   &:focus {
     &::placeholder {
-      color: $ds75;
       font-size: $secondFontSize;
     }
   }
