--- a/src/assets/scss/modules/like-button.scss
+++ b/src/assets/scss/modules/like-button.scss
@@ -47,7 +47,7 @@
 	}
 	&_active {
 		svg {
-			transform: rotateY(360deg);
+			transform: rotateZ(-360deg);
 			animation-duration: $trFast;
 			animation-name: changeSize;
 		}
