--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -56,3 +56,4 @@ $trMid                   : .5s;
 // gradients
 
 $purpleGr                : linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$greenGr                 : linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
