--- a/src/pug/includes/modules/input.pug
+++ b/src/pug/includes/modules/input.pug
@@ -1,7 +1,7 @@
-mixin input(title, wrappClass, type, placeholder, className, name, classNameForIcon, xlink, boolean)
+mixin input(title, wrappClass, type, placeholder, className, name, classNameForIcon, xlink)
 	label(for=inputWrapper).title-element #{title}
 		br
 		span.input-wrapper(class=wrappClass)
-			input.input-wrapper__input(type=type placeholder=placeholder class=className name=name readonly=boolean)
+			input.input-wrapper__input(type=type placeholder=placeholder class=className name=name)
 			svg(class=classNameForIcon)
 				use(xlink:href=xlink)
