--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,6 +11,8 @@ include ../includes/modules/radio-button.pug
 include ../includes/modules/toggle.pug
 include ../includes/modules/toggle-checkbox.pug
 include ../includes/modules/like-dislike.pug
+include ../includes/modules/rate.pug
+include ../includes/modules/range-slider.pug
 
 block content
 	section
@@ -22,9 +24,9 @@ block content
 					+dropdown-guests("dropdown","guests")
 					+input("masked text field","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
 					br
-					+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+					+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here input-wrapper__input_date-picker date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more")
 					br
-					+input("Filter date dropdown","input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+					+input("Filter date dropdown","input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown","text", "Дата въезда - выезда","datepicker-here date-dropdown-2 dropdown input-wrapper__input_date-picker","Date","icon-dropdown expand-more","#expand_more","true")
 					br
 					+input("text field","input-wrapper_w266 input-wrapper_icon-show subscription-text-field","text", "You email adress","email","","arrow-forward","#arrow_forward")
 					br
@@ -33,8 +35,7 @@ block content
 					+checkbox("Expandable checkbox list","checkbox-wrapper_w266 checkbox-wrapper_dropdown","checkbox-wrapper__ul_dropdown","Завтрак","Письменный стол","Кроватка","Телевизор","Шампунь","Телевизор","Шампунь")
 				.col
 					+checkbox("Expandable checkbox list","checkbox-wrapper_w222","","Можно курить","Можно с питомцами","Можно пригласить гостей (до 10 человек)")
-					br 
-					+checkbox-2("Expandable checkbox list","checkbox-wrapper_w266 checkbox-wrapper_second","","Широкий коридор","Ширина коридоров в номере не менее 91 см.","Помощник для инвалидов","На 1 этаже вас встретит специалист  и проводит до номера.") 
+					
 					br
 					+radio-button("radio buttons")
 					br
@@ -42,7 +43,16 @@ block content
 					br
 					.title-element like button
 					+like-dislike()
-					
+					br
+					.title-element rate button
+					+rate()
+					br 
+					+checkbox-2("Expandable checkbox list","checkbox-wrapper_w266 checkbox-wrapper_second","","Широкий коридор","Ширина коридоров в номере не менее 91 см.","Помощник для инвалидов","На 1 этаже вас встретит специалист  и проводит до номера.") 
+				.col 
+					.title-element range slider
+					+range-slider()
+
+
 
 
 					
