--- a/src/pug/includes/modules/rate.pug
+++ b/src/pug/includes/modules/rate.pug
@@ -2,26 +2,26 @@ mixin rate()
 	.rate
 		label.rate__star-wrap
 			input.rate__rating(type="radio" name="example" value="1")
-			span
+			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
 			input.rate__rating(type="radio" name="example" value="2")
-			span
+			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
 			input.rate__rating(type="radio" name="example" value="3")
-			span
+			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
 			input.rate__rating(type="radio" name="example" value="4")
-			span
+			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
 			input.rate__rating(type="radio" name="example" value="5")
-			span 
+			div 
 				svg.rate__star
 					use(xlink:href="#star")
