--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -3,26 +3,26 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url('/assets/fonts/Montserrat/Montserrat-Regular.eot'); /* IE9 Compat Modes */
-  src: url('/assets/fonts/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/assets/fonts/Montserrat/Montserrat-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/assets/fonts/Montserrat/Montserrat-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/assets/fonts/Montserrat/Montserrat-Regular.svg') format('svg'); /* Legacy iOS */
+  src: url('../fonts/Montserrat/Montserrat-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Montserrat/Montserrat-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Montserrat/Montserrat-Regular.svg') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
   font-family: "MontserratBold";
-  src: url('/assets/fonts/Montserrat/Montserrat-Bold.eot'); /* IE9 Compat Modes */
-  src: url('/assets/fonts/Montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/assets/fonts/Montserrat/Montserrat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/assets/fonts/Montserrat/Montserrat-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/assets/fonts/Montserrat/Montserrat-Bold.svg') format('svg'); /* Legacy iOS */
+  src: url('../fonts/Montserrat/Montserrat-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Montserrat/Montserrat-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Montserrat/Montserrat-Bold.svg') format('svg'); /* Legacy iOS */
   }
 @font-face {
   font-family: "QuicksandBold";
-  src: url('/assets/fonts/Quicksand-Bold/Quicksand-Bold.eot'); /* IE9 Compat Modes */
-  src: url('/assets/fonts/Quicksand-Bold/Quicksand-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/assets/fonts/Quicksand-Bold/Quicksand-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-       url('/assets/fonts/Quicksand-Bold/Quicksand-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/assets/fonts/Quicksand-Bold/Quicksand-Bold.svg') format('svg'); /* Legacy */
+  src: url('../fonts/Quicksand-Bold/Quicksand-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Quicksand-Bold/Quicksand-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Quicksand-Bold/Quicksand-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Quicksand-Bold/Quicksand-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Quicksand-Bold/Quicksand-Bold.svg') format('svg'); /* Legacy */
 }
